--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,58 @@
-# Logs
-logs
+# ============================================
+# RenovAI – Global .gitignore
+# ============================================
+
+# --- Frontend (Node/React) ---
+node_modules/
+dist/
+dist-ssr/
+*.local
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# --- Backend (Python) ---
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+venv/
+env/
+.env
+*.egg-info/
+*.egg
+.pytest_cache/
+.coverage
+htmlcov/
 
-# Editor directories and files
+# --- Environment files (ALL members) ---
+.env
+.env.local
+.env.production
+# Keep .env.example files tracked
+!.env.example
+!backend/.env.example
+!frontend/.env.example
+
+# --- Editor / IDE ---
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+Thumbs.db
+
+# --- OS ---
+.DS_Store
+desktop.ini
+
+# --- Uploads / Temp ---
+backend/storage/uploads/
+*.tmp
