--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,19 +1,26 @@
-# ============================================
-# RenovAI Backend Environment Variables
-# Copy this to .env and fill in your values
-# ============================================
-
 # Server
 HOST=0.0.0.0
 PORT=8000
 DEBUG=true
 
-# CORS
+# CORS (comma-separated)
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
 
-# LLM Configuration (Member 4)
-LLM_API_KEY=your_api_key_here
-LLM_MODEL=your_model_name
-
-# File Uploads
+# Uploads
 MAX_IMAGE_SIZE_MB=10
+
+# LLM (optional)
+LLM_PROVIDER=
+LLM_TIMEOUT=12
+
+# OpenAI-compatible
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
+
+# Ollama
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.1
+
+# Generic LLM endpoint
+GENERIC_LLM_URL=
+GENERIC_LLM_KEY=
