--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ python-multipart==0.0.9
 
 # Environment
 python-dotenv==1.0.1
+requests==2.32.3
 
 # Computer Vision (Member 3)
 opencv-python-headless==4.10.0.84
