--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ============================================
-# RenovAI – Global .gitignore
+# Planovate – Global .gitignore
 # ============================================
 
 # --- Frontend (Node/React) ---
