--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # ============================================
-# RenovAI Backend Environment Variables
+# Planovate Backend Environment Variables
 # Copy this to .env and fill in your values
 # ============================================
 
