--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ["pip install -r backend/requirements.txt"]
 cmds = []
 
 [start]
-cmd = "cd backend && python -m uvicorn main:app --host 0.0.0.0 --port $PORT"
+cmd = "python -m uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
