--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,6 @@
 [phases.setup]
 nixPkgs = ["python310", "python310Packages.pip"]
+aptPkgs = ["libgl1"]
 
 [phases.install]
 cmds = ["pip install -r backend/requirements.txt"]
@@ -8,4 +9,4 @@ cmds = ["pip install -r backend/requirements.txt"]
 cmds = []
 
 [start]
-cmd = "python -m uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
+cmd = "PYTHONPATH=/app python -m uvicorn backend.main:app --host 0.0.0.0 --port $PORT"
