production level changes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,35 +1,46 @@
 # ============================================
-# RenovAI Backend Environment Variables
+# Planovate Backend Environment Variables
 # Copy this to .env and fill in your values
 # ============================================
+
+# Environment (development, staging, production)
+ENVIRONMENT=development
+DEBUG=true
 
 # Server
 HOST=0.0.0.0
 PORT=8000
-DEBUG=true
 
-# CORS (comma-separated)
+# Security - Allowed hosts (production only, comma-separated)
+# Example: planovate-api.com,www.planovate-api.com
+ALLOWED_HOSTS=
+
+# CORS - Allowed origins (comma-separated)
+# Development:
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:5174,http://localhost:3000
+# Production example:
+# ALLOWED_ORIGINS=https://planovate.vercel.app,https://www.planovate.vercel.app
 
 # Uploads
 MAX_IMAGE_SIZE_MB=10
+REQUEST_TIMEOUT=30
 
-# LLM Provider (choose one: gemini, openai, ollama, generic)
+# LLM Provider (choose one: gemini, openai, ollama)
 LLM_PROVIDER=gemini
 LLM_TIMEOUT=12
 
-# Gemini (recommended)
-GEMINI_API_KEY=your_gemini_api_key
+# Gemini (recommended - free tier available)
+# Get your API key: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
 GEMINI_MODEL=gemini-2.0-flash
 
 # OpenAI (alternative)
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
 
-# Ollama (local, alternative)
+# Ollama (local LLM, alternative)
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=llama3.1
 
-# Generic LLM endpoint (alternative)
-GENERIC_LLM_URL=
-GENERIC_LLM_KEY=
+# Logging
+LOG_LEVEL=INFO
