--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -16,7 +16,7 @@ PORT=8000
 ALLOWED_HOSTS=planovate-production.up.railway.app
 
 # CORS - Your frontend production URLs
-ALLOWED_ORIGINS=https://planovate.vercel.app,https://www.planovate.com
+ALLOWED_ORIGINS=https://planovate-iota.vercel.app,https://planovate.vercel.app,https://www.planovate.com
 
 # Uploads
 MAX_IMAGE_SIZE_MB=10
